# fatecat

./: .gitignore  AGENTS.md  Makefile  README.md  SKILL.md  pyproject.toml
assets/: AGENTS.md
assets/config/: .env.example  branding.json
assets/deploy/: agent_manifest.json  bootstrap_agent.sh  pack.sh
assets/docs/: Agent 一键部署.md  OI文档.md  Telegram Bot 启动与重启指南.md  功能清单.md  功能状态.md  功能补齐计划.md  当前目录结构.md  系统架构图.md
assets/docs/prompts/: prompt-user-bazi-kline.md  胶水开发要求-prompt.md
assets/docs/生产故障/: production_incident_2025-12-17_strong_weak.md  telegram Markdown 代码块格式修复记录 2025-12-15.md
assets/fate/: AGENTS.md
assets/lifecycle/: AGENTS.md
deploy/: pack.sh
docs/: OI文档.md  Telegram Bot 启动与重启指南.md  功能清单.md  序列图.md  系统架构图.md
docs/prompts/: prompt-user-bazi-kline.md  完整性检查-prompt.md  胶水开发要求-prompt.md
libs/database/bazi/: db_v2.py
modules/fate_core/: AGENTS.md
modules/telegram/: __init__.py  start.py
modules/telegram/scripts/: generate_complete_report.py  start.sh
modules/telegram/src/: _paths.py  bazi_calculator.py  bot.py  branding.py  dantalion_integration.py  fortel_ziwei_integration.py  liuren.py  location.py  main.py  models.py  output_formatter.py  rate_limiter.py  report_generator.py  system_optimization.py
modules/telegram/tests/: test_all_features.py  test_complete_integration.py  (+1 more)
project/: DEBUG.md
project/modules/: AGENTS.md  __init__.py
project/scripts/: README.md  generate_bazi.sh  start_all.sh
project/tests/: test_fate_core_cli.py
references/: architecture.md  commands.md  execution-playbook.md  index.md  io-contract.md  lifecycle.md  migration-plan.md  ops-pack.md  stage-gates.md  troubleshooting.md
runtime/: AGENTS.md
scripts/: README.md  acceptance.sh  bootstrap.sh  build_all.sh  clean-runtime.sh  collect-ops-bundle.sh  common.sh  delivery-smoke.sh  deploy.sh  download_libs.sh  export-runtime.sh  generate_bazi.sh  health.sh  init-lifecycle-pack.sh  lifecycle-status.sh  preflight.sh  pure-analysis.sh  serve-api.sh  serve-bot.sh  start_all.sh  test_all.sh
scripts/reports/: generate_complete_output.py  generate_full_report.py  generate_user_report.py  扩展功能具体内容.py
scripts/setup/: bootstrap_fate_engine.sh  bootstrap_fatecat.sh  setup_external_env.sh  telegram-bot.service
services/: __init__.py
services/fate_core/: AGENTS.md
services/telegram/: requirements.txt
skills/: AGENTS.md
skills/fatecat/: AGENTS.md  SKILL.md
tests/: __init__.py  conftest.py  test_branding_support.py  test_fate_core_cli.py
tests/fate_core/: test_field_registry.py  test_pure_analysis_usecase.py
(+111 files in other folders)
